[project]
name = "streamlit-modul6"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "NABILA FIRDAIS SISTA", email = "nabilafidaisista@gmail.com"},
]
dependencies = ["streamlit>=1.52.2", "tensorflow>=2.20.0", "scikit-learn>=1.8.0", "joblib>=1.5.3"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
